tests/hevm/pass/multi2/multi2.act
constructor of A
interface constructor(uint z)

iff
   CALLVALUE == 0
   inRange(uint256, z + 1)

creates
   uint x := z + 1


behaviour x of A
interface x()

iff
   CALLVALUE == 0

returns
   pre(x)

constructor of B
interface constructor(uint u)

iff
   CALLVALUE == 0

creates
   uint y := 0
   A a := create A(u)
